Eclipse 4.17 JDT Patch for Groovy-Eclipse: JDT commit 8d0952b
#1139